Changelog
=========


2.1 (unreleased)
----------------

- Translate portlet title in "plone" domain.
  [jone]

- Fix messages in "add to favourites" script, so that translations work.
  [jone]

- Added some missing german translations.
  [jone]


2.0 (2010-10-26)
----------------

- Only plone4 compatible

- fixed namespaces in setup.py
  [phgross]

- added the addToFavorites script (use now links and no more the depracted
  favorite type), and to some other changes for plone4 support
  [phgross]

- removed inline css on portlet
  [fsprenger]

- added new, removed unused translations
  [phgross]


1.1
---

- removed the addToFavourites script. Now Using the standard Plone Favorites,
  and their script.
  [phgross]

- Added Brazilian Portuguese translation.
  [lucmult]

- Improve management of Favorites folder, can be in this names: favourites,
  favorites, Favourites, Favourites, to integrate better with default Plone
  action.
  [lucmult]


1.0
---

- Initial release
